# GLVoxelRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp  object.hpp  octree.hpp  player.hpp  screen.hpp  shader.fs  shader.hpp  texture3d.hpp  worldgen.hpp
