cmake_minimum_required(VERSION 3.3)
project(VoxelRenderer VERSION 1.0) 
set(CXX_STANDARD 11)
#set(CMAKE_BUILD_TYPE Debug)
if ( ${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
    message( FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there. You may need to remove CMakeCache.txt." )
endif()

add_subdirectory(lib/FreeType)
add_subdirectory(lib/glfw)
add_subdirectory(lib/glm)
add_subdirectory(lib/glad)
set(GLFW_LIBRARY_TYPE SHARED)
set(BUILD_SHARED_LIBS 1)
add_executable(${PROJECT_NAME} src/main.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC lib/glad/include)
target_include_directories(${PROJECT_NAME} PUBLIC lib/glfw/include)
target_include_directories(${PROJECT_NAME} PUBLIC lib/glm)
target_include_directories(${PROJECT_NAME} PUBLIC lib/PerlinNoise)
target_include_directories(${PROJECT_NAME} PUBLIC lib/FreeType/include)
target_link_libraries(${PROJECT_NAME} glad glfw glm )
file(GLOB_RECURSE shaders "*.vs" "*.fs")
file(COPY ${shaders} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/shd)